--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img src="/img/logo.png" alt="Logotipo">
     
                 <ul>
-                    <li><a href="#">Projetos</a></li>
+                    <li><a href="/projetos.html">Projetos</a></li>
                     <li><a href="/sobre.html">Sobre</a></li>
                 </ul>
             </header>
